# collecty

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml
back-rust/: .gitignore  Cargo.toml  Dockerfile
back-rust/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
back-rust/doc/aead/: all.html  index.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.Buffer.html  trait.KeyInit.html
back-rust/doc/aes/: struct.Aes128.html  struct.Aes128Dec.html  struct.Aes128Enc.html  struct.Aes192.html  struct.Aes192Dec.html  struct.Aes192Enc.html  struct.Aes256.html  struct.Aes256Dec.html  struct.Aes256Enc.html  type.Block.html  type.Block8.html
back-rust/doc/aes_gcm/: struct.AesGcm.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.KeyInit.html  trait.KeySizeUser.html  type.Aes128Gcm.html  type.Aes256Gcm.html  type.Tag.html
back-rust/doc/ascii/: all.html  enum.AsciiChar.html  fn.caret_decode.html  fn.caret_encode.html  index.html  struct.AsAsciiStrError.html  struct.AsciiStr.html  struct.AsciiString.html  struct.FromAsciiError.html  struct.Lines.html  struct.ToAsciiCharError.html  trait.AsAsciiStr.html  trait.AsMutAsciiStr.html  trait.IntoAsciiString.html  trait.ToAsciiChar.html  type.Chars.html  type.CharsMut.html
back-rust/doc/async_channel/: struct.Receiver.html  struct.Recv.html  (+1 more)
back-rust/migrations/: 20250221105026_create_users_table.sql  20250221105137_create_assets_table.sql  20250222153510_create_tokens_table.sql  20250227170100_create_wallets_table.sql  20250305230033_create_offers_table.sql
back-rust/src/: lib.rs  main.rs
(+43179 files in other folders)
