[package]
name = "collecty_back"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "collecty_back"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

#[features]
#Multipart = ["axum/multipart"]  # Enable axum's multipart feature
#type-headers = ["dep:axum-extra", "axum-extra/typed-header"]  # Enable axum-extra and its typed-header feature

[dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["multipart"] }
axum-macros = "0.4.2"
bcrypt = "0.17.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
headers = "0.4.0"
hex = "0.4.3"
http = "1.2.0"
jsonwebtoken = "9.3.1"
multipart = "0.18.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std", "runtime-tokio", "migrate", "json", "macros", "uuid", "chrono", "bigdecimal"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
url = "2.5.4"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
xrpl-rust = "0.5.0"
